[gd_scene load_steps=4 format=3 uid="uid://bdywu7pev7kdl"]

[ext_resource type="Script" uid="uid://d36dqm65npll2" path="res://src/ui/deck_builder.gd" id="1_gwmgs"]
[ext_resource type="PackedScene" uid="uid://bf5v6a3mlj7e3" path="res://deck_view.tscn" id="2_sxdv4"]
[ext_resource type="Texture2D" uid="uid://3x26btyylk4f" path="res://cards/art/System Gateway/1.jpg" id="3_pcmq2"]

[node name="DeckBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gwmgs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Available Cards"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeckTitle" type="LineEdit" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Deck Title"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardSelector" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_sxdv4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CardSelector"]
layout_mode = 2
text = "Back"

[node name="CardPreview" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviewRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CardPreview"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_pcmq2")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CardPreview"]
layout_mode = 2

[node name="ButtonRemove" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CardPreview/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<- Remove"

[node name="ButtonAdd" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CardPreview/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add ->"

[node name="DeckView" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_sxdv4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/DeckView"]
layout_mode = 2
text = "Save"
